03_ingressTLS/ingressTLS_ingress-namebased.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-namebased
spec:
  rules:
    - host: red.example.com
      http:
        paths:
        - backend:
            serviceName: hello-world-service-red
            servicePort: 4242
    - host: blue.example.com
      http:
        paths:
        - backend:
            serviceName: hello-world-service-blue
            servicePort: 4343
