03_ingressTLS/ingressTLS_ingress-path-backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-path
spec:
  rules:
    - host: path.example.com
      http:
        paths:
        - path: /red
          backend:
            serviceName: hello-world-service-red
            servicePort: 4242
        - path: /blue
          backend:
            serviceName: hello-world-service-blue
            servicePort: 4343
  backend:
    serviceName: hello-world-service-single
    servicePort: 80
