03_ingressTLS/ingressTLS_ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-tls
spec:
  tls:
  - hosts:
    - 34.96.118.202.xip.io
    secretName: tls-secret
  rules:
  - host: 34.96.118.202.xip.io
    http:
      paths:
      - backend:
          serviceName: hello-world-service-single
          servicePort: 80
  backend:
    serviceName: hello-world-service-single
    servicePort: 80
